--- a/0.5_single_page_app.md
+++ b/0.5_single_page_app.md
@@ -2,12 +2,24 @@
 sequenceDiagram
 participant browser
 participant server
+
 browser->>server: HTTP GET https://studies.cs.helsinki.fi/exampleapp/spa
+activate server
 server->>browser: HTML code
+deactivate server
+
 browser->>server: HTTP GET https://studies.cs.helsinki.fi/exampleapp/main.css
+activate server
 server->>browser: main.css
+deactivate server
+
 browser->>server: HTTP GET https://studies.cs.helsinki.fi/exampleapp/spa.js
+activate server
 server->>browser: spa.js
+deactivate server
+
 browser->>server: HTTP GET https://studies.cs.helsinki.fi/exampleapp/data.json
+activate server
 server->>browser: [{"content": "HTML is easy", date: "2025-01-01"}, ...]
+deactivate server
 ```
