--- a/0.6_new_note_SPA.md
+++ b/0.6_new_note_SPA.md
@@ -2,6 +2,9 @@
 sequenceDiagram
 participant browser
 participant server
+
 browser->>server: HTTP GET https://studies.cs.helsinki.fi/exampleapp/new_note_spa
+activate server
 server->>browser: {"message": "note created"}
+deactivate server
 ```
